feature: make CommandRegistrationHandler generic & route names through components